Correct mistake at end of Roadblocks

--- a/Design.tex
+++ b/Design.tex
@@ -389,6 +389,6 @@
   is command comments, which are necessary for this assignment.  A
   likely point of implementation for this feature is within the
   \texttt{Tokenizer} class, whose language could be extended to discard
-  all features after a comment token.
+  all characters after a comment token.
 
 \end{document}
