Extend escape sequence specification

--- a/Design.tex
+++ b/Design.tex
@@ -161,8 +161,12 @@
     \bslash n & Line feed \\
     \bslash r & Carriage return \\
     \bslash t & Tab \\
-    \bslash \bslash & Backslash
+    \bslash \emph{char} & \emph{char}
   \end{tabular}
+
+  The last substitution in the table above allows for the insertion of
+  quotes, backslashes, and other special characters as elements of a
+  word.
 
   \subsubsection{Interface}
   \lstinputlisting[firstline=36,lastline=50]{Interfaces.hpp}
