Correct input/output description for Tokenizer

--- a/Design.tex
+++ b/Design.tex
@@ -141,7 +141,7 @@
 
   \subsection{\texttt{Tokenizer}}
 
-  This class accepts a string and transforms it into a stream of
+  This class accepts a stream and transforms it into a sequence of
   \texttt{Token} instances through lexical analysis.  The
   classifications used in this analysis are represented with the
   following regular expressions, in the order of descending precedence,
